atualizacao das classes de Entregador e entregaService